Atualiza título da página inicial

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Documentando o desmonte da democracia"
+title: "Documentando o desmonte da democracia no regime Bolsonaro"
 layout: default
 ---
 
