--- a/_pages/assuntos.html
+++ b/_pages/assuntos.html
@@ -1,13 +1,13 @@
 ---
-title: "Marcadores"
+title: "Assuntos"
 layout: default
-permalink: "/marcadores.html"
+permalink: "/assuntos.html"
 ---
 
 <section class="mt-4 mb-5">
     
     <div class="container mb-1">
-        <h2 class="font-weight-bold title">Marcadores</h2>
+        <h2 class="font-weight-bold title">Assuntos</h2>
         <div class="row">
         {% include menu-tags.html %}
         </div>
